protocols/tests/identities/identity_d2/two_different_assignments_error.out
error: Thread 1 attempted conflicting assignment to 'a': current=1, new=2
  ┌─ identities/identity_d2/identity_d2.prot:9:3
  │
9 │   DUT.a := a;
  │   ^^^^^^^^^^^ Thread 1 attempted conflicting assignment to 'a': current=1, new=2

